Agregado de componentes y modulos

--- a/asysa_inmed-cenabast/App.config
+++ b/asysa_inmed-cenabast/App.config
@@ -9,11 +9,11 @@
 		<add key="ApiUrl" value="URL_DE_TU_API"/>
 		<add key="ApiJsonPayload" value="TU_JSON"/>
 		<add key="LogFilePath" value="C:\\Ruta\\Completa\\Del\\Archivo\\MyApiServiceLog.txt"/>
-		<add key="ToEmailAddress" value="tu_correo@gmail.com"/>
+		<add key="ToEmailAddress" value="dnanculeo@asysa.cl"/>
 		<add key="SmtpServer" value="smtp.gmail.com"/>
 		<add key="SmtpPort" value="587"/>
-		<add key="SmtpUsername" value="tu_correo@gmail.com"/>
-		<add key="SmtpPassword" value="tu_contraseña"/>
+		<add key="SmtpUsername" value="app@informes.asysa.cl"/>
+		<add key="SmtpPassword" value="bre3YbipPbvt"/>
 	</appSettings>
 
 	<runtime>
